# F4Online

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
docs/: ARCHITECTURE.md
libs/common/: .gitignore
src/: main.cpp
